--- a/from/package.json
+++ b/from/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "antd": "^2.6.4",
     "babel-core": "^6.3.15",
+    "echarts": "^3.6.2",
     "es6-promise": "^4.0.5",
     "eventsource-polyfill": "^0.9.6",
     "file-loader": "^0.9.0",
@@ -16,6 +17,7 @@
     "lodash": "^4.16.4",
     "moment": "^2.17.1",
     "react": "^15.6.1",
+    "react-bmap": "^1.0.52",
     "react-dom": "^15.6.1",
     "react-highcharts": "^12.0.0",
     "react-html5video": "^2.3.0",
