--- a/from/package.json
+++ b/from/package.json
@@ -16,6 +16,8 @@
     "highcharts-more": "^0.1.2",
     "lodash": "^4.16.4",
     "moment": "^2.17.1",
+    "node-sass": "^4.6.1",
+    "rc-tween-one": "^1.5.5",
     "react": "^15.6.1",
     "react-bmap": "^1.0.52",
     "react-dom": "^15.6.1",
@@ -29,13 +31,13 @@
     "whatwg-fetch": "^1.1.1"
   },
   "devDependencies": {
-    "babel-core": "^6.3.15",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^5.0.0-beta4",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.0.0",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^1.0.6",
     "css-loader": "^0.25.0",
     "cssnext-loader": "^1.0.1",
@@ -47,6 +49,7 @@
     "file-loader": "^0.9.0",
     "path": "^0.12.7",
     "redux-devtools": "^2.1.5",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "webpack": "^1.0.0",
     "webpack-dev-middleware": "^1.8.4",
