--- a/from/package.json
+++ b/from/package.json
@@ -28,6 +28,7 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
     "whatwg-fetch": "^1.1.1"
   },
   "devDependencies": {
